fixed image bug on safari

--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ header a {
 }
 
 .i6 {
-    flex-grow: 1;
+    height: 50%;
 }
 
 .i7 {
